# wireless_ps2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adrian_dualshock.cpp  adrian_dualshock.hpp  adrian_helpers.hpp  adrian_spi.hpp  adrian_spi_redbear.hpp  main.cpp  ps2_tests.cpp  spi_master_redbear.hpp
